--- a/main.tex
+++ b/main.tex
@@ -34,7 +34,7 @@
 \title[On Improving Pattern Recognition in Deep Learning Systems through Self-Organization]{
     On Improving Pattern Recognition in Deep Learning Systems through Self-Organization
 }
-\subtitle{Incorporating Findings from Neuroscience about Brain Functionality into Modern Deep Learning Architectures}
+\subtitle{Incorporating Findings from Neuroscience about Natural Intelligence into Modern Deep Learning Architectures}
 
 \author[Pascal Sager]{Pascal Sager}
 \date{\today}
