--- a/tex/preface.tex
+++ b/tex/preface.tex
@@ -1,6 +1,6 @@
 \small
-This thesis is the last step stone before I will hold the title ``Master of Science''.
-To me science means the systematic analysis of the real or virtual world through observations and experiments as well as the further development of existing technology. 
+This thesis is the last hurdle before I will hold the title ``Master of Science''.
+To me, science means the systematic analysis of the real or virtual world through observations and experiments as well as the further development of existing technology. 
 I am lucky enough to be able to apply the knowledge and methodologies I learned during my studies to research projects at the Centre for Artificial Intelligence (CAI) of the Zurich University of Applied Sciences (ZHAW).
 I was mentored and supported during my studies by Prof. Dr. Thilo Stadelmann.
 He uses to say (also in accordance with his \href{https://stdm.github.io/Great-methodology-delivers-great-theses/}{blog-post}) ``Great methodology delivers great theses''.
@@ -8,21 +8,21 @@ It is always desirable to have an excellent outcome such as a system that can ex
 However, in my opinion, it is equally or even more important to reason why and how something works, to justify choices, and to show limitations.
 I wrote my Thesis with these thoughts in mind and hope that the readers are able to follow my reasoning.
 
-In the Introduction section, the fundamentals of Deep Learning and its limitations is described.
+In the Introduction section, the work is motivated and in the subsequent chapter the fundamentals of Deep Learning and its limitations is described.
 Afterwards, it is motivated why methodologies inspired by neuroscience could overcome these limitations.
 This thesis aims at a target audience with a background in Deep Learning.
 Consequently, the concepts of Deep Learning are only roughly described.
-Since neurocomputing may be rather unknown to the target audience, a more extensive overview about this field is given.
+Since Neurocomputing may be rather unknown to the target audience, a more extensive overview about this field is given.
 
 I would like to thank a couple of colleagues and friends.
 First I think of my mentor Prof. Dr. Thilo Stadelmann who got me excited about AI years ago and later introduced me to research.
-He always encouraged creative ideas and helped to link different topics to address problems with methodologies from other fields.
+He always encouraged creative ideas and helped to link different research areas to address problems with methodologies from other fields.
 Thanks to his support, help, and guidance, I have grown personally as well as professionally.
 Further thanks go to Dr. Jan Deriu. 
 Especially at the beginning of my thesis, he steered my thoughts in one direction.
 His unconventional thinking has led to the questioning of many methods that have stood the test of time for decades (this was also the inspiration for Geoffrey Hinton's quote on the page before, although I wouldn't presume to say that this thesis will change the future).
 To Prof. Dr. Christoph von der Malsburg for his seemingly endless patience in introducing me to neuroscience.
-He could build the bridge between the two diverging fields of Deep Learning and Neuroscience, serving as an inspiration for various new ideas.
+He can build the bridge between the two diverging fields of Deep Learning and Neuroscience, inspires to think outside the box.
 
 The biggest thanks, however, goes to my family, who made this journey possible for me.
 My parents, who supported and encouraged me in every way.
